syntax = "proto2";

service SearchLogs {
  rpc SearchBetween(TimeRequest) returns (LogResponse) {}
}

message TimeRequest {
  required string time = 1;
  required string deltaH = 2;
  required string deltaM = 3;
  required string deltaS = 4;
  required string deltaMs = 5;
}

message LogResponse {
  required string log = 1;
}
